central nav wrapping fixed* and added to how to image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,7 +108,7 @@ body {
 
 /* white buttons */
 .header-container > div > .login-button,
-.central-nav > .white-button {
+.central-nav > .central-nav-buttons > .white-button {
 	border: 0;
 	color: black;
 	background-color: whitesmoke;
@@ -150,16 +150,18 @@ body {
 /* middle nav */
 .central-nav {
 	/* border: 1px solid red; */
-	width: 50%;
+	/* width: 50%; */
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 .central-nav-buttons {
 	display: flex;
 	flex: 1;
 	justify-content: space-around;
+	flex-wrap: wrap;
 }
 
 .central-nav-buttons > button {
@@ -168,7 +170,7 @@ body {
 	border: 0;
 	border-right: 1px solid white;
 	background: 0;
-	padding: 5px;
+	padding: 0rem 1.2rem 0rem 1rem;
 	font-size: 18px;
 	margin: 8px;
 }
@@ -296,6 +298,7 @@ body {
 	flex-direction: column;
 	justify-content: flex-end;
 	text-align: center;
+	align-items: center;
 	color: white;
 	width: 70%;
 	justify-self: flex-end;
